--- a/vuedemo/demo1/demo1/package.json
+++ b/vuedemo/demo1/demo1/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "exif-js": "^2.3.0",
+    "package-name": "^0.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
